# rc-ask-zulip

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  NOTES.md  Ollama.sh  README.md  Recurse-Center-API.md  STUDY_GUIDE.md  Test.sh  Todo.md  agent.py  anonymize.py  auth.py  checkin_classifier.py  checkin_fetch.py  checkin_job.py  checkin_topics.py  db.py  dev.sh  install.sh  llm_client.py  main.py  pyproject.toml  run.sh  runCLI.sh  setup_ollama.sh  test_auth.py  test_checkins.py  zulip_search.py
scripts/: test_heap_llm.py
static/: conversation.html  index.html  landing.html  pair.html  zulip.html
static/css/: common.css  conversation.css  index.css  landing.css  pair.css  zulip.css
static/js/: conversation.js  index.js  pair.js
tests/: test_agent_llm_config.py
